--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "pm2 start ecosystem.config.js --env production",
+    "start": "node src/app.js",
     "start:dev": "pm2 start ecosystem.config.js --env development",
     "start:integration": "pm2 start ecosystem.config.js --env integration",
     "start:production": "pm2 start ecosystem.config.js --env production"
